# ocaml-dream-mvc

./: .env.example  .gitignore  .ocamlformat  LICENSE  README.md  dune-project  notes.md  ocaml_dream_mvc.opam
src/: Config.ml  Main.ml  bun.lockb  dune  main.ml
src/client/: App.re  Index.re  dune
src/client/components/: dune
src/client/views/: dune
src/components/: Article.re  ArticleSummary.re  Footer.re  Header.re  Layout.re  dune
src/controllers/: Articles.ml  Home.ml  articles.ml  dune  home.ml
src/models/: Article.ml  article.ml  dune
src/server/: Esbuild.re  Main.ml  dune
src/server/controllers/: Home.ml  dune
src/server/models/: dune
src/server/views/views-js/: dune
src/server/views/views-native/: Article.re  Articles.re  dune
src/server/views/views-native/components/: ArticleForm.re  ArticleSummary.re  CreateArticleForm.re  Date.re  Footer.re  Layout.re  dune_
src/types/: Article.ml  dune
src/views/: Article.mlx  Article.re  ArticleForm.re  ArticleId.re  Articles.mlx  Articles.re  ArticlesIndex.re  CreateArticle.re_  Home.re  Index.mlx  Index.re  Views.re  dune
src/views/articles/: ArticleId.re  ArticlesIndex.re
src/views/components/: Article.mlx  Article.re  ArticleSummary.mlx  ArticleSummary.re  CreateArticleForm.re  Date.re  Footer.mlx  Footer.re  Header.mlx  Header.re  Layout.mlx  Layout.re  dune
src/views/views-js/: dune
src/views/views-native/: Index.re
src/views/views-native/components/: CreateArticleForm.re  Header.re  Layout.re  ViewArticle.re
