(melange.emit
 (alias client)
 (target app)
 (enabled_if
  (= %{profile} "dev"))
 (modules app)
 (libraries types views_js melange reason-react)
 (preprocess
  (pps reason-react-ppx melange.ppx))
 (module_systems commonjs))

; (library
;   (name client)
;   (modes melange)
;   (preprocess
;    (pps melange.ppx reason-react-ppx))
;   (libraries views_js types reason-react.react reason-react.reactDom))

