; These components are automatically copied from the `components` folder to the `client` folder

(library
  (name components_client)
  (modes melange)
  (libraries models reason-react melange.js)
  (wrapped false)
  (preprocess (pps melange.ppx reason-react-ppx)))

(copy_files#
 (mode fallback) ; `mode fallback` means you can override files in the client folder
 (files "../../components/**.{re,rei}"))
